--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -259,7 +259,8 @@
 
     /*Comunidad*/
     .footer__texto {
-        text-align: center;
+        text-align: left;
+        
     }
 
     .footer__titulo {
@@ -270,10 +271,12 @@
         font-size: 14px;
     }
 
+  
+
 
     /*Sobre nosotros*/
     .footer__texto1 {
-        text-align: center;
+        text-align: left;
     }
 
     .footer__titulo1 {
@@ -287,14 +290,14 @@
 
     /*Siguenos*/
     .footer__texto2 {
-        text-align: center;
+        text-align: left;
         font-size: 18px;
     }
 
     .footer__social {
         display: flex;
         align-items: center;
-        justify-content: center;
+        
     }
 
     .footer__social a:hover {
