--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -29,20 +29,16 @@
         display: block;
         background-color: white;
         position: absolute;
-        top: 80px;
+        top: -114px;
         width: 95vw;
         height: 100vh;
         font-size: .8em;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: center;
         transform: translateX(-50em);
         transition: all 1.2s ease-in-out;
-    }
-
-    .navbar__item li{
-        margin-top: 40px;
     }
 
     .navbar__item--on {
@@ -83,6 +79,12 @@
         display: none;
 
     }
+
+    .navbar__close{
+        display: none;
+    }
+
+
 
     body {
         margin: 0;
