--- a/style.css
+++ b/style.css
@@ -257,20 +257,26 @@ article[id] {
 
 .btn__wsp {
   position: fixed;
-  width: 60px;
-  height: 60px;
-  line-height: 58px;
-  bottom: 1em;
-  right: 1em;
-  background: #25d366;
-  color: #FFF;
+  width: 55px;
+  height: 55px;
+  line-height: 55px;
+  bottom: 1.8em;
+  right: 33px;
+  background: #0df053;
+  color: #fff;
   border-radius: 50px;
   text-align: center;
-  font-size: 35px;
+  font-size: 30px;
   box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
   z-index: 2;
   transition: all 300ms ease;
   cursor: pointer;
+}
+
+.btn__wsp:hover{
+  text-decoration: none;
+  color: #0df053;
+  background-color: #fff;
 }
 
 /*Boton ir arriba*/
@@ -280,7 +286,7 @@ article[id] {
   font-size: 20px;
   position: fixed;
   bottom: 10em;
-  right: 1.8em;
+  right: 35px;
   padding: 12px 16px;
   background: red;
   color: white;
@@ -290,7 +296,7 @@ article[id] {
   cursor: pointer;
   transform: translateX(300px);
   transition: .6s ease-in-out;
-  z-index: 1;
+  z-index: 2;
 }
 
 .btn__scrolltop--on {
