--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Archivo+Black&family=Cardo:ital@1&family=Irish+Grover&family=Poller+One&family=Press+Start+2P&family=Roboto:wght@300;400;700&display=swap');
 
-:root{
+:root {
   /*Colores web*/
-  --color-uno     : #3498db;
-  --color-dos     : #8e44ad;
-  --color-tres    : #c0392b;
-  --color-cuatro  : #16a085;
-  --color-cinco   : #34495e;
+  --color-uno: #3498db;
+  --color-dos: #8e44ad;
+  --color-tres: #c0392b;
+  --color-cuatro: #16a085;
+  --color-cinco: #34495e;
 }
 
 
@@ -42,6 +42,7 @@ article[id] {
     'main      main      main'
     'article   article   aside'
     'section   section   section'
+    'form      form      form'
     'footer    footer    footer';
 }
 
@@ -77,7 +78,7 @@ article[id] {
   font-size: 30px;
   font-weight: 600;
   z-index: 9;
- 
+
 }
 
 
@@ -134,7 +135,7 @@ article[id] {
 }
 
 /*icono buscar*/
-.navbar__buscar{
+.navbar__buscar {
   margin-right: 20px;
   color: var(--color-cinco);
 }
@@ -145,7 +146,7 @@ article[id] {
   display: none;
 }
 
-.navbar__parrafo{
+.navbar__parrafo {
   display: none;
 }
 
@@ -283,7 +284,7 @@ article[id] {
   cursor: pointer;
 }
 
-.btn__wsp:hover{
+.btn__wsp:hover {
   text-decoration: none;
   color: #0df053;
   background-color: #fff;
@@ -495,7 +496,7 @@ article[id] {
   text-align: center;
   color: black;
   z-index: 1;
-  
+
 }
 
 .iglesia__titulo {
@@ -503,7 +504,7 @@ article[id] {
   font-family: 'Roboto', sans-serif;
   font-weight: 900;
   margin: 15px auto;
- 
+
 }
 
 .iglesia__tituloPre {
@@ -641,6 +642,82 @@ article[id] {
 
 
 
+/*Formulario*/
+.form {
+  width: 100%;
+  background: url(img/Alabanza2.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  margin: auto;
+  grid-area: form;
+}
+
+.form__contenedor {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 450px;
+  margin: 70px auto;
+  background: rgba(0, 0, 0, .4);
+  padding: 30px 20px;
+  border-radius: 7px;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
+}
+
+.form__titulo {
+  color: white;
+  font-weight: 600;
+  text-align: center;
+  margin: 0;
+  font-size: 25px;
+  margin-bottom: 20px;
+}
+
+.form__input {
+  width: 100%;
+  background: rgba(0, 0, 0, .6);
+  margin-bottom: 20px;
+  padding: 7px;
+  font-size: 14px;
+  border: none;
+  background: rgba(255, 255, 255, .4);
+  color: white;
+}
+
+.form__textarea {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 7px;
+  font-size: 14px;
+  border: none;
+  background: rgba(255, 255, 255, .4);
+  color: white;
+
+}
+
+.form__button {
+  width: 100%;
+  font-size: 16px;
+  font-weight: 600;
+  background: var(--color-uno);
+  color: white;
+  padding: 10px;
+  border: none;
+}
+
+.form__button:hover {
+  cursor: pointer;
+  background-color: var(--color-cinco);
+  transition: all .2s ease-in-out;
+}
+
+
+
+
+
 
 /*footer*/
 
@@ -661,7 +738,7 @@ article[id] {
   position: relative;
 }
 
-.footer__grupo1 strong{
+.footer__grupo1 strong {
   font-weight: bold;
 }
 
@@ -785,6 +862,6 @@ article[id] {
   padding: 15px;
 }
 
-.footer__grupo2 strong{
+.footer__grupo2 strong {
   font-weight: bold;
 }
