--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@ article[id] {
     'header    header    header'
     'nav       nav       nav'
     'main      main      main'
-    'aside   article   article'
+    'article   article   article'
+    'aside     aside     aside '
     'section   section   section'
     'form      form      form'
     'footer    footer    footer';
@@ -331,7 +332,7 @@ article[id] {
 }
 
 .article__card {
-  width: 70%;
+  width: 50%;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -420,7 +421,7 @@ article[id] {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, .6);
+  background-color: rgba(0, 0, 0, .7);
   z-index: 0;
 
 
@@ -433,15 +434,14 @@ article[id] {
   height: auto;
   text-align: center;
   color: white;
-  font-size: 30px;
   z-index: 1;
   font-family: 'Cardo', serif;
-  margin-top: 50px;
+  margin-top: 100px;
 
 }
 
 .aside__titulo {
-  font-size: 35px;
+  font-size: 65px;
 
 }
 
@@ -453,17 +453,20 @@ article[id] {
 }
 
 .aside__iframe {
-  width: 80%;
+  display: flex;
+  width: 100%;
   height: auto;
   z-index: 1;
   margin-bottom: 120px;
+  align-items: center;
+  justify-content: space-around;
 
 
 }
 
 .aside__iframe iframe {
-  width: 300px;
-  height: 250px;
+  width: 400px;
+  height: 300px;
   margin: 2em auto;
 
 }
