--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -14,19 +14,24 @@
         display: grid;
 
         grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(8, auto);
+        grid-template-rows: repeat(9, auto);
         grid-template-areas:
+
             'header    header    header'
             'nav       nav       nav'
             'main      main      main'
             'article   article   article'
+            'mision    mision    mision'
             'aside     aside     aside'
             'section   section   section'
             'form      form      form'
             'footer    footer    footer';
+
     }
 
     /*barra de navegacion*/
+
+
     .navbar__item {
         display: block;
         background-color: white;
@@ -348,6 +353,7 @@
     .contenedor {
         width: 95vw;
 
+
         margin: .6em auto;
         grid-gap: .7em;
         display: grid;
@@ -359,6 +365,7 @@
             'nav       nav       nav'
             'main      main      main'
             'article   article   article'
+            'mision    mision    mision'
             'aside     aside     aside'
             'section   section   section'
             'form      form      form'
@@ -456,11 +463,105 @@
     }
 
 
+    /* estructura de texto y foto */
+
+    .mision {
+        width: 100%;
+        height: auto;
+        grid-area: mision;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .mision__texto {
+        width: 80%;
+        padding: 20px 0 20px 0;
+        color: black;
+        text-align: justify;
+        margin-top: 50px;
+
+
+    }
+
+    .mision__tituloPre {
+        font-size: 20px;
+        font-family: 'Cardo', serif;
+        font-weight: 100;
+        margin-bottom: 8px;
+        text-align: center;
+    }
+
+    .mision__linea {
+        width: 90px;
+        height: 2px;
+        background-color: var(--color-uno);
+        margin: 15px 0 0 9.6em;
+
+
+    }
+
+    .mision__titulo {
+        font-size: 40px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 900;
+        text-align: center;
+        line-height: 1.2em;
+        margin-top: 10px;
+    }
+
+    .mision__tituloSub {
+        font-size: 12px;
+        font-weight: 400;
+        letter-spacing: 5px;
+        text-align: center;
+        margin-top: 10px;
+    }
+
+    .mision__parrafo {
+        font-size: 12px;
+        margin-left: 4em;
+        margin-top: 25px;
+        line-height: 23px;
+    }
+
+    .mision__imagen {
+        width: 20em;
+    }
 
 
 
 
-    /*iglesia*/
+    /*iglesia */
+
+    .iglesia {
+        width: 100%;
+    }
+
+    .iglesia__tituloPre {
+        font-size: 20px;
+    }
+
+    .iglesia__titulo {
+        font-size: 40px;
+        line-height: 1.2em;
+    }
+
+    .iglesia__linea {
+        width: 90px;
+        height: 2px;
+        background-color: var(--color-uno);
+        text-align: center;
+        margin: 15px auto;
+    }
+
+    .iglesia__tituloSub {
+        font-size: 12px;
+        font-weight: 400;
+        letter-spacing: 5px;
+    }
+
     .iglesia__contenedor {
         display: flex;
         flex-wrap: wrap;
@@ -476,6 +577,8 @@
     .iglesia__cardTitulo {
         font-size: 20px;
     }
+
+
 
 
     /*Formulario*/
