--- a/style.css
+++ b/style.css
@@ -28,19 +28,20 @@ article[id] {
 /*Contenedor general (grilla layaut)*/
 .contenedor {
   width: 95vw;
-  max-width: 75em;
+  max-width: 65em;
   margin: 1.2em auto;
   grid-gap: .7em;
   display: grid;
 
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(6, auto);
+  grid-template-rows: repeat(9, auto);
   grid-template-areas:
 
     'header    header    header'
     'nav       nav       nav'
     'main      main      main'
     'article   article   article'
+    'mision    mision    mision'
     'aside     aside     aside '
     'section   section   section'
     'form      form      form'
@@ -106,13 +107,13 @@ article[id] {
 /*Logo*/
 .navbar__logo {
   width: 50px;
-  margin-left: 20px;
+  margin-left: 4em;
 }
 
 /*Lista enlaces*/
 .navbar__item {
   font-size: 12px;
-  margin-right: 20px;
+  margin-right: 4em;
   font-weight: 600;
   display: flex;
   text-transform: uppercase;
@@ -315,6 +316,68 @@ article[id] {
   transform: translateX(0px);
 }
 
+/* estructura de texto y foto */
+
+.mision{
+  width: 100%;
+  height: auto;
+  grid-area: mision;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; 
+}
+
+.mision__texto {
+  width: 60%;
+  padding: 20px 0 20px 0;
+  color: black;
+  
+
+}
+
+.mision__tituloPre {
+  font-size: 30px;
+  font-family: 'Cardo', serif;
+  font-weight: 100;
+  margin-left: 2em;
+  margin-bottom: 20px;
+}
+
+.mision__linea {
+  width: 190px;
+  height: 2px;
+  background-color: var(--color-uno);
+  margin-left: 3em;
+  margin-bottom: 15px;
+  
+}
+
+.mision__titulo {
+  font-size: 52px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 900;
+  margin-left: 1.15em;
+}
+
+.mision__tituloSub {
+  font-size: 15px;
+  font-weight: 400;
+  letter-spacing: 5px;
+  margin-left: 4em;
+  margin-top: 10px;
+}
+
+.mision__parrafo{
+  font-size: 16px;
+  margin-left: 4em;
+  margin-top: 25px;
+  line-height: 23px;
+}
+
+.mision__imagen {
+  width: 30em;
+}
+
 
 
 
@@ -323,12 +386,11 @@ article[id] {
 
 .article {
   width: 100%;
-  height: 60%;
+  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
   grid-area: article;
-
 }
 
 .article__card {
@@ -383,13 +445,14 @@ article[id] {
 }
 
 
-.article__articulo{
+.article__articulo {
   grid-area: articulo;
 }
 
+
+
+
 /*Precursores (Videos de Youtube*/
-
-
 
 .aside {
   width: 100%;
@@ -460,6 +523,7 @@ article[id] {
   margin-bottom: 120px;
   align-items: center;
   justify-content: space-around;
+
 
 
 }
