--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -1,3 +1,9 @@
+/*Small devices (landscape phones, less than 768px)*/
+@media only screen and (max-width: 460px) {
+
+
+}
+
 /* `sm` applies to x-small devices (portrait phones, less than 576px)*/
 @media only screen and (max-width: 580px) {
 
@@ -67,6 +73,13 @@
         padding: 1em;
     }
 
+
+    /*Logo*/
+    .navbar__logo {
+        width: 50px;
+        margin-left: 20px;
+    }
+
     body {
         margin: 0;
         padding: 0;
@@ -74,7 +87,7 @@
 
     /*Header*/
     .header__titulo {
-        font-size: 16px;
+        font-size: 14px;
         font-weight: 600;
         color: rgb(255, 255, 255);
     }
@@ -143,6 +156,63 @@
         width: 80vw;
         top: 190px;
     }
+
+
+    /* estructura de texto y foto */
+
+    .mision {
+        flex-direction: column;
+    }
+
+    .mision__texto {
+        width: 90%;
+        padding: 10px 0 20px 0;
+        color: black;
+        text-align: justify;
+        margin-top: 50px;
+
+
+    }
+
+    .mision__tituloPre {
+        font-size: 20px;
+        font-family: 'Cardo', serif;
+        font-weight: 100;
+        margin-bottom: 0 0 8px 0;
+        text-align: center;
+    }
+
+    .mision__titulo {
+        font-size: 40px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 900;
+        text-align: center;
+        line-height: 1.2em;
+        margin-top: 10px;
+    }
+
+    .mision__tituloSub {
+        font-size: 12px;
+        font-weight: 400;
+        letter-spacing: 5px;
+        text-align: center;
+        margin-top: 10px;
+    }
+
+    .mision__parrafo {
+        font-size: 12px;
+        margin: 0 auto;
+        padding: 0;
+        line-height: 23px;
+    }
+
+    .mision__imagen {
+        width: 20em;
+    }
+
+
+
+
 
 
     /*Precursores (Videos de Youtube*/
@@ -409,13 +479,11 @@
         padding: 1em;
     }
 
-    /*Header*/
-    .header__titulo {
-        font-size: 18px;
-        font-weight: 600;
-        color: rgb(255, 255, 255);
+    .navbar__logo {
+        margin-left: 20px;
     }
 
+ 
 
     /*Precursores (Videos de Youtube*/
     .aside {
@@ -472,7 +540,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: space-between;
+        justify-content: center;
     }
 
     .mision__texto {
@@ -497,7 +565,7 @@
         width: 90px;
         height: 2px;
         background-color: var(--color-uno);
-        margin: 15px 0 0 9.6em;
+
 
 
     }
@@ -521,7 +589,6 @@
 
     .mision__parrafo {
         font-size: 12px;
-        margin-left: 4em;
         margin-top: 25px;
         line-height: 23px;
     }
